--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.sql.init.mode=embedded
 
 server.error.include-binding-errors=always
 server.error.include-message=always
+
+logging.level.io.r2dbc.h2=DEBUG
